Added manifest and service-worker

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: rgb(154, 185, 206);
+  color: #9ab9ce;
 }
 
 .button {
