--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -36,7 +36,7 @@ body {
   outline: none;
 }
 .control-button-arrow {
-  border-left: 10px solid white;
+  border-left: 10px solid #9ab9ce;
   border-top: 8px solid transparent;
   border-bottom: 8px solid transparent;
   margin-left: 8px;
