--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -46,6 +46,18 @@ dialog::backdrop {
   background-color: #2c3238;
 }
 
+/* IconButton */
+.icon-button {
+  border: 0;
+  background-color: transparent;  
+  fill: pink;
+  padding: 0;
+}
+.icon-button svg {
+  width: 20px;
+  height: 20px;
+}
+
 
 .controls {
   position: absolute;
@@ -82,6 +94,23 @@ dialog::backdrop {
 #board {
   position: relative;
   /*opacity: 0.1;*/
+}
+
+
+#solverButton {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  margin: 0;
+  font-size: 0;
+  fill: #3a638b;
+}
+#solverButton.rotate {
+  animation: rotate 1s linear infinite;
+}
+@keyframes rotate {
+  from{transform: rotate(0deg);}
+  to{transform: rotate(360deg);}
 }
 
 .boardTable {
