--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,6 @@
+@import './_button.css';
+@import './_dialog.css';
+
 html {
   background-color: black;
 }
@@ -17,43 +20,6 @@ header {
 }
 
 
-/* Dialog */
-
-dialog {
-  color: #aaa;
-  background-color: #333;
-  border: 0;
-}
-dialog::backdrop {
-  background-color: rgba(0,0,0,0.7)
-}
-.dialog-actions {
-  margin-top: 1rem;
-  text-align: right
-}
-
-
-/* Button */
-.button {
-  border: 0;
-  padding: 0.3rem 0.5rem;
-  font-size: inherit;
-  outline: none;
-}
-.button:not(:disabled) {
-  color: inherit;
-  cursor: pointer;
-  background-color: #234567;
-}
-.button:not(:disabled):hover,
-.button:not(:disabled):focus {
-  background-color: #3a638b;
-}
-
-.button:disabled {
-  color: #6a7b8b;
-  background-color: #2c3238;
-}
 
 /* IconButton */
 .icon-button {
