Dynamic score text

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -25,8 +25,13 @@ header {
 .icon-button {
   border: 0;
   background-color: transparent;  
-  fill: pink;
+  fill: #3a638b;
+  cursor: pointer;
   padding: 0;
+}
+.icon-button:hover,
+.icon-button:active {
+  fill: #6497ca;
 }
 .icon-button svg {
   width: 20px;
@@ -71,7 +76,6 @@ header {
 
 #solverButton {
   font-size: 0;
-  fill: #3a638b;
 }
 #solverButton.rotate {
   animation: rotate 1s linear infinite;
