--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,5 +1,5 @@
-@import './_button.css';
-@import './_dialog.css';
+@import '_button.css';
+@import '_dialog.css';
 
 html {
   background-color: black;
