Borders and bump service worker

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -93,7 +93,7 @@ header {
 
 /* Table */
 .boardTable {
-  border: 2px solid #756856;
+  border: 2px solid #bfc2c5;
   border-collapse: separate;
   border-spacing: 0;
   background-color: #ddd;
