--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -115,7 +115,11 @@ header {
 .goal {
   width: 100%;
   height: 20%;
-  transform: rotate(45deg)
+  transform: rotate(45deg);
+  opacity: 0.5
+}
+.goal.visited {
+  opacity: 1;
 }
 .goal:before {
   content: '';
@@ -125,10 +129,10 @@ header {
 	background-color: inherit;
 	display: block;
 }
-.goal-0 {background-color: hsla(0, 80%, 30%, 0.5)}
-.goal-1 {background-color: hsla(140, 80%, 30%, 0.5)}
-.goal-2 {background-color: hsla(220, 80%, 30%, 0.5)}
-.goal-3 {background-color: hsla(60, 80%, 30%, 0.5)}
+.goal-0 {background-color: hsl(0, 80%, 40%)}
+.goal-1 {background-color: hsl(140, 80%, 40%)}
+.goal-2 {background-color: hsl(220, 80%, 40%)}
+.goal-3 {background-color: hsl(60, 80%, 40%)}
 
 
 .start {
