--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -166,7 +166,7 @@ header {
   left: 0;
   width: 18px;
   height: 18px;
-  border-radius: 100%;
+  border-radius: 50%;
   background-color: rebeccapurple;
   transition: transform 0.3s, box-shadow 0.5s, opacity 0.5s;
   opacity: 0.4;
@@ -177,6 +177,7 @@ header {
   color: rgba(255, 255, 255, 0.5);
   text-align: center;
   cursor: pointer;
+  user-select: none;
 }
 .robot.active {
   opacity: 1;
